tests/compile-fail/generic_event_parameter_default.rs
use sml::sml;

pub struct Message<T>(T);

sml! {
    Defaulted<T = u32> {
        *Idle + event<Message<T>> = X,
    }
}

fn main() {}
